# cookiecutter-polylith-uv

./: .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml  workspace.toml
hooks/: post_gen_project.py  pre_gen_project.py  pre_prompt.py
{{ cookiecutter.project_slug }}/: .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml
{{ cookiecutter.project_slug }}/bases/{{ cookiecutter.project_slug }}/api/: settings.py
{{ cookiecutter.project_slug }}/components/{{ cookiecutter.project_slug }}/persistence/: settings.py
{{ cookiecutter.project_slug }}/components/{{ cookiecutter.project_slug }}/persistence/tables/: base.py
{{ cookiecutter.project_slug }}/components/{{ cookiecutter.project_slug }}/settings/: base.py
{{ cookiecutter.project_slug }}/projects/api/: pyproject.toml  run.py
{{ cookiecutter.project_slug }}/projects/api/alembic/: env.py
{{ cookiecutter.project_slug }}/projects/{{ cookiecutter.project_slug }}/api/: Dockerfile  alembic.ini  pyproject.toml
{{ cookiecutter.project_slug }}/test/bases/{{ cookiecutter.project_slug }}/api/: test_core.py
{{ cookiecutter.project_slug }}/test/components/{{ cookiecutter.project_slug }}/persistence/: test_core.py
{{ cookiecutter.project_slug }}/test/components/{{ cookiecutter.project_slug }}/settings/: test_core.py
