[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[project]
name = "api"
version = "0.1.0"

authors = [
    { name = "{{ cookiecutter.author }}", email = "{{ cookiecutter.author_email }}" },
]

requires-python = ">= 3.12"

dependencies = [
  {% if cookiecutter.sample_project %}
  "pydantic>=2.10.3",
  "pydantic-settings>=2.7.0",
  {% endif %}
  {% if cookiecutter.persistence_component %}
  "sqlalchemy>=2.0.36",
  "alembic>=1.14.0",
  {% endif %}
]

[tool.hatch.build]
dev-mode-dirs = ["../../components", "../../bases"]

[tool.hatch.build.hooks.polylith-bricks]

[tool.polylith.bricks]
"../../bases/{{ cookiecutter.project_slug }}/api" = "{{ cookiecutter.project_slug }}/api"
