[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[project]
name = "api"
version = "0.1.0"

authors = [
    { name = "{{ cookiecutter.author }}", email = "{{ cookiecutter.author_email }}" },
]

requires-python = ">= 3.12"

dependencies = []

[tool.hatch.build]
dev-mode-dirs = ["../../components", "../../bases"]

[tool.hatch.build.hooks.polylith-bricks]

[tool.polylith.bricks]
"../../bases/{{ cookiecutter.project_slug }}/api" = "{{ cookiecutter.project_slug }}/api"
